# reo

./: .gitignore  CMakeLists.txt  README.md
game/: CMakeLists.txt
game/formats/: afs_archive.cpp  afs_archive.h  amo_parser.cpp  amo_parser.h  nbd_parser.cpp  nbd_parser.h  nbd_renderer.cpp  nbd_renderer.h  rdt_parser.cpp  rdt_parser.h
media/: CMakeLists.txt
media/adx/: adx_decoder.cpp  adx_decoder.h
media/sofdec/: sofdec_decoder.cpp  sofdec_decoder.h
media/tim2/: tim2_loader.cpp  tim2_loader.h
network/: CMakeLists.txt
network/dnas/: dnas_bypass.cpp  dnas_bypass.h
network/lobby/: lobby_client.cpp  lobby_client.h
network/snap_client/: snap_protocol.cpp  snap_protocol.h
recomp/: CMakeLists.txt  reo_bootstrap.cpp
recomp/config/: outbreak.toml  outbreak_file2.toml  outbreak_render_unstub.toml
recomp/config/output/: entry_1039f0_0x103a48.cpp  entry_104f00_0x1050b0.cpp  entry_106a10_0x106aa0.cpp  entry_106aa0_0x106ad8.cpp  entry_10a4b8_0x10a538.cpp  entry_10a538_0x10a610.cpp  entry_10a610_0x10a6a8.cpp  entry_10a730_0x10a790.cpp  entry_10b890_0x10c7a8.cpp  entry_10c8e0_0x10cb18.cpp  entry_114240_0x114260.cpp  entry_114260_0x114270.cpp  entry_114a40_0x114a50.cpp  entry_114df0_0x114df8.cpp  entry_11aff0_0x11b010.cpp  entry_11d090_0x11d0d0.cpp  entry_11dec0_0x11df30.cpp  entry_11f408_0x11f618.cpp  entry_11f618_0x11f7d0.cpp  entry_11f878_0x11fbb8.cpp  entry_11fbb8_0x1201c0.cpp  entry_1201c0_0x1204e0.cpp  entry_1204e0_0x120908.cpp  entry_120908_0x120ae8.cpp  entry_1226d8_0x1226f0.cpp  entry_1226f0_0x122708.cpp  entry_122948_0x122ae8.cpp  entry_122af0_0x122d80.cpp  entry_122e40_0x122e70.cpp  entry_122e70_0x122e90.cpp  entry_122e90_0x122ec0.cpp  entry_122ec0_0x122ef0.cpp  entry_122ef0_0x122fa0.cpp  entry_123088_0x1230b0.cpp  entry_1235e8_0x123700.cpp  entry_123700_0x123898.cpp  entry_123898_0x123a18.cpp  entry_123a18_0x123a40.cpp  entry_123ec0_0x123fc0.cpp  entry_123fc0_0x124158.cpp  (+3793 more)
recomp/config/output_overlay/: ps2_overlay_functions.h  register_overlay_functions.cpp  sub_00370000_0x370000.cpp  sub_00370140_0x370140.cpp  sub_003701A0_0x3701a0.cpp  sub_00370220_0x370220.cpp  sub_003703A0_0x3703a0.cpp  sub_00370420_0x370420.cpp  sub_00370490_0x370490.cpp  sub_00370760_0x370760.cpp  sub_003707A0_0x3707a0.cpp  sub_00370960_0x370960.cpp  sub_00370AC0_0x370ac0.cpp  sub_00370B00_0x370b00.cpp  sub_00370FE0_0x370fe0.cpp  sub_00371160_0x371160.cpp  sub_00371200_0x371200.cpp  sub_003713F0_0x3713f0.cpp  sub_00371760_0x371760.cpp  sub_00371870_0x371870.cpp  sub_00371880_0x371880.cpp  sub_003718B0_0x3718b0.cpp  sub_003718E0_0x3718e0.cpp  sub_003719E0_0x3719e0.cpp  sub_003719F0_0x3719f0.cpp  sub_00371A00_0x371a00.cpp  sub_00371B40_0x371b40.cpp  sub_00371EF0_0x371ef0.cpp  sub_00372210_0x372210.cpp  sub_003724F0_0x3724f0.cpp  sub_00372720_0x372720.cpp  sub_00373630_0x373630.cpp  sub_00373F40_0x373f40.cpp  sub_00374780_0x374780.cpp  sub_003748A0_0x3748a0.cpp  sub_00374B20_0x374b20.cpp  sub_00374C00_0x374c00.cpp  sub_00374C70_0x374c70.cpp  sub_00374CC0_0x374cc0.cpp  sub_00374F10_0x374f10.cpp  (+57 more)
recomp/overrides/: reo_hw_bridge.cpp  reo_hw_bridge.h  reo_netbio.cpp  reo_netbio.h  reo_override.cpp  reo_trace_logger.cpp  reo_trace_logger.h
runtime/: CMakeLists.txt
runtime/cdvd/: cdvd.cpp  cdvd.h
runtime/core/: context.cpp  context.h  memory.cpp  memory.h  syscall.cpp  syscall.h  types.h
runtime/gs/: gs_renderer.cpp  gs_renderer.h
runtime/input/: input.cpp  input.h
runtime/iop/: iop_hle.cpp  iop_hle.h
runtime/spu2/: spu2.cpp  spu2.h
runtime/timer/: timer.cpp  timer.h
runtime/vu/: vu_interpreter.cpp  vu_interpreter.h
src/: config.cpp  config.h  main.cpp
tools/: CMakeLists.txt
tools/elf_analyze/: CMakeLists.txt  main.cpp
tools/gs_dump_replay/: CMakeLists.txt  gen_test_dump.cpp  main.cpp  trace_format.h
tools/iso_extract/: CMakeLists.txt  iso9660.cpp  iso9660.h  main.cpp
tools/ps2_debug/: capture_demo_scene.py  capture_gs_dump.py  dump_nbd_tex.py  dump_overlays.py  dump_task_table.py  launch_pcsx2.py  pine_client.py  ps2_trace.py  quick_test.py  reo_trace_config.json
tools/ps2_debug/overlay_dumps/: overlay_config.toml  overlay_title_functions.txt
